kubernetes/home/dev-environment/leaderboard-site/oauth-error-auth-leaderboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: oauth-error-auth-leaderboard
  namespace: dev-environment
spec:
  errors:
    status: 
      - "401-403"
    service: leaderboard-site
    query: "/oauth2/sign_in?rd=https://leaderboard.dev.opryga.com"
