kubernetes/home/dev-environment/leaderboard-site/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: leaderboard-site
  namespace: dev-environment
  annotations: 
    kubernetes.io/ingress.class: traefik-external
    # traefik.ingress.kubernetes.io/router.middlewares: traefik-dev-ip-list@kubernetescrd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`leaderboard.dev.opryga.com`)
      kind: Rule
      services:
        - name: leaderboard-site
          port: 80
      middlewares:
        # - name: dev-ip-list 
        - name: default-headers
        - name: oauth-forward-auth
        - name: oauth-unauthorized
        # - name: sso-auth-error
        
  tls:
    secretName: dev-opryga-com-tls
